# examples

./: .gitignore  LICENSE  README.md
azure-web-app-deployment/: README.md
gRPC-and-libtorch-with-Bazel/: README.md
gRPC-and-libtorch-with-Bazel/Bazel+gRPC+protobuf/: README.md
gRPC-and-libtorch-with-Bazel/Bazel+gRPC+protobuf/proto/: messaging.proto
gRPC-and-libtorch-with-Bazel/Bazel+torch/: BUILD  README.md  WORKSPACE  altWORKSPACE  libtorch.BUILD
gRPC-and-libtorch-with-Bazel/CMakeLists+torch/: CMakeLists.txt  README.md
server-essentials/: README.md
